--- a/assets/styles.css
+++ b/assets/styles.css
@@ -8,6 +8,7 @@
     --sidebar-bg: #1e293b;       /* Slate intermedio */
     --body-bg: #f8fafc;          /* Blanco roto premium */
     --text-main: #334155;
+    --secondary-color: #7a8b64;    /* Para textos secundarios y elementos menos importantes */
 }
 
 body {
@@ -132,3 +133,133 @@ header .text-muted, header div {
   .card .card-body { padding-top: 1rem; padding-bottom: 1rem; }
 }
 .stickySection { position: sticky; top: 20px; }
+
+
+/* iconos bootstrap */
+.bi.bi-cart-fill{
+    font-size: large;
+}
+/*carrito modal*/
+.modal{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    pointer-events: none;
+    display: flex;
+    opacity: 0;
+    transition: opacity 0.3s 0.5s;
+   
+}
+.carrito{
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    position: relative;
+    gap: 1rem;
+    align-items: center;
+    margin: auto;
+    width: 90%;
+    max-width: 600px;
+    max-height: 98%;
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    padding: 3rem 2.5rem; ;
+    margin: auto;
+}
+.carrito h2{
+    align-items: end;
+    font-size: 2.5rem;
+    font-weight: 600;
+    padding: auto;
+    right: 20%;
+}
+.carrito .close{
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+
+/*modal calculos*/
+.modalc{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    pointer-events: none;
+    display: flex;
+    opacity: 0;
+    transition: opacity 0.3s 0.5s;
+    z-index: 100;
+   
+}
+.calculo{
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    position: relative;
+    gap: 1rem;
+    align-items: center;
+    margin: auto;
+    width: 90%;
+    max-width: 600px;
+    max-height: 98%;
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    padding: 3rem 2.5rem; ;
+    margin: auto;
+}
+.calculo .btn.btn-success{
+    top: 1rem;
+    right: 1rem;
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+.calculo h2{
+    align-items: end;
+    font-size: 2.5rem;
+    font-weight: 600;
+    padding: auto;
+    right: 20%;
+}
+/*fin del modal calculos*/
+.modal-show{
+    opacity: 1;
+    pointer-events: unset;
+    transition: opacity 0.6s;
+}
+.modalc2{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    pointer-events: none;
+    display: flex;
+    opacity: 0;
+    transition: opacity 0.3s 0.5s;
+    z-index: 100;
+   
+}
+
+.modalc3{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    pointer-events: none;
+    display: flex;
+    opacity: 0;
+    transition: opacity 0.3s 0.5s;
+    z-index: 100;
+   
+}
