--- a/assets/styles.css
+++ b/assets/styles.css
@@ -132,3 +132,9 @@ header .text-muted, header div {
   .card .card-body { padding-top: 1rem; padding-bottom: 1rem; }
 }
 .stickySection { position: sticky; top: 20px; }
+.card-text {
+    display: -webkit-box;
+    -webkit-line-clamp: 3; /* máximo 3 líneas */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
